python-reahl (3.2.0) unstable; urgency=low

 * Changed Label to subsume what was done by InputLabel previously.
 * Added Bootstrap 3.3.4 and upgraded Jquery to 1.11.2 and jquery-blockUI to 2.70.0.
 * Added a ColumnLayout and ResponsiveSize for Bootstrap and refactored accordingly.

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 19 Mar 2015 13:18:00 +0200

python-reahl (3.1.0) unstable; urgency=low

 * Split the login functionality out of UserSession to LoginSession (Blueprint: login-session-split).
 * Removed reahl-tofu dependency on nose and on reahl-component.
 * Added use of tox and devpi on all projects (Blueprint: using-tox-devpi).
 * Added correct status reporting for important commands when run via reahl setup -sX.
 * Changed reahl uploading to Pypi repos to first register also on each upload.
 * Added devpipush and devpitest commands to reahl script.
 * Added --ignore-release-checks and --ignore-upload-check switches to reahl upload command.
 * Added --generate-setup-py switch to reahl shell command.
 * Added --with-marked-tests nose plugin to reahl-tofu.
 * Added reahl.tofu.nosesupport.set_run_fixture to reahl-tofu.
 * Added .get_attribute() method on HTMLElement.
 * Moved .xpath() method to be available for WidgetTester too.
 * Renamed charset to encoding on MethodResult and subclasses, ViewableFile and subclasses.
 * Renamed content_type args to mime_type, resulting in migration needed for PersistedFile.
 * Added better support for layout, changed over to using pure (Blueprint: layout).
 * Deprecated HMenu and VMenu in favour of HorizontalLayout and VerticalLayout.
 * Changed @deprecated to include version and add it to docstring.
 * Added rudimentary support for distributing wheels (Blueprint: wheels).

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 19 Mar 2015 13:18:00 +0200

python-reahl (3.0.0) unstable; urgency=low

 * Changed from using Elixir to Declarative (Blueprint: declarative).
 * Changed to run on Python3 (Blueprint: python3).
